RESOLVED FIXED194471
[JSC] CachedTypes should use jsString instead of JSString::create
https://bugs.webkit.org/show_bug.cgi?id=194471
Summary [JSC] CachedTypes should use jsString instead of JSString::create
Yusuke Suzuki
Reported 2019-02-08 22:47:22 PST
JSString::create requires some invariant like length is not zero. Use jsString().
Attachments
Patch (1.74 KB, patch)
2019-02-08 22:58 PST, Yusuke Suzuki
mark.lam: review+
Yusuke Suzuki
Comment 1 2019-02-08 22:58:07 PST
Yusuke Suzuki
Comment 2 2019-02-08 23:43:32 PST
Radar WebKit Bug Importer
Comment 3 2019-02-08 23:44:28 PST
Note You need to log in before you can comment on or make changes to this bug.