[JSC] CachedTypes should use jsString instead of JSString::create https://bugs.webkit.org/show_bug.cgi?id=194471

Reviewed by Mark Lam.

Use jsString() here because JSString::create is a bit low-level API and it requires some invariant like "length is not zero".

* runtime/CachedTypes.cpp:
(JSC::CachedJSValue::decode const):

Canonical link: https://commits.webkit.org/208895@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241236 268f45cc-cd09-0410-ab3c-d52691b4dbfc